docs/content/contracts/4.x/api/token/ERC1155.mdx
---
title: "ERC1155"
description: "Smart contract ERC1155 utilities and implementations"
---

This set of interfaces and contracts are all related to the [ERC1155 Multi Token Standard](https://eips.ethereum.org/EIPS/eip-1155).

The EIP consists of three interfaces which fulfill different roles, found here as [`IERC1155`](#IERC1155), [`IERC1155MetadataURI`](#IERC1155MetadataURI) and [`IERC1155Receiver`](#IERC1155Receiver).

[`ERC1155`](#ERC1155) implements the mandatory [`IERC1155`](#IERC1155) interface, as well as the optional extension [`IERC1155MetadataURI`](#IERC1155MetadataURI), by relying on the substitution mechanism to use the same URI for all token types, dramatically reducing gas costs.

Additionally there are multiple custom extensions, including:

* designation of addresses that can pause token transfers for all users ([`ERC1155Pausable`](#ERC1155Pausable)).
* destruction of own tokens ([`ERC1155Burnable`](#ERC1155Burnable)).

<Callout>
This core set of contracts is designed to be unopinionated, allowing developers to access the internal functions in ERC1155 (such as [`_mint`](#ERC1155-_mint-address-uint256-uint256-bytes-)) and expose them as external functions in the way they prefer. On the other hand, [ERC1155 Presets](/contracts/4.x/erc1155#preset-erc1155-contract) (such as [`ERC1155PresetMinterPauser`](#ERC1155PresetMinterPauser)) are designed using opinionated patterns to provide developers with ready to use, deployable contracts.
</Callout>

## Core

[`IERC1155`](#IERC1155)

[`IERC1155MetadataURI`](#IERC1155MetadataURI)

[`ERC1155`](#ERC1155)

[`IERC1155Receiver`](#IERC1155Receiver)

[`ERC1155Receiver`](#ERC1155Receiver)

## Extensions

[`ERC1155Pausable`](#ERC1155Pausable)

[`ERC1155Burnable`](#ERC1155Burnable)

[`ERC1155Supply`](#ERC1155Supply)

[`ERC1155URIStorage`](#ERC1155URIStorage)

## Presets

These contracts are preconfigured combinations of the above features. They can be used through inheritance or as models to copy and paste their source code.

[`ERC1155PresetMinterPauser`](#ERC1155PresetMinterPauser)

## Utilities

[`ERC1155Holder`](#ERC1155Holder)

<a id="ERC1155"></a>

<div style={{marginTop: "4em"}} className="w-full flex flex-row items-center justify-between">

## `ERC1155`

<a target="_blank" style={{marginTop: "1.5em"}} href="https://github.com/OpenZeppelin/openzeppelin-contracts/blob/v4.9.6/contracts/token/ERC1155/ERC1155.sol">
<svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="lucide lucide-github-icon lucide-github"><path d="M15 22v-4a4.8 4.8 0 0 0-1-3.5c3 0 6-2 6-5.5.08-1.25-.27-2.48-1-3.5.28-1.15.28-2.35 0-3.5 0 0-1 0-3 1.5-2.64-.5-5.36-.5-8 0C6 2 5 2 5 2c-.3 1.15-.3 2.35 0 3.5A5.403 5.403 0 0 0 4 9c0 3.5 3 5.5 6 5.5-.39.49-.68 1.05-.85 1.65-.17.6-.22 1.23-.15 1.85v4"/><path d="M9 18c-4.51 2-5-2-7-2"/></svg>
</a>

</div>

```solidity
import "@openzeppelin/contracts/token/ERC1155/ERC1155.sol";
```

Implementation of the basic standard multi-token.
See https://eips.ethereum.org/EIPS/eip-1155
Originally based on code by Enjin: https://github.com/enjin/erc-1155

_Available since v3.1._

<div className="bg-secondary p-4 rounded-md mb-6">
<h3 style={{ marginTop: "0"}}>Functions</h3>
<div className="font-mono">
- [constructor(uri_)](#ERC1155-constructor-string-)
- [supportsInterface(interfaceId)](#ERC1155-supportsInterface-bytes4-)
- [uri()](#ERC1155-uri-uint256-)
- [balanceOf(account, id)](#ERC1155-balanceOf-address-uint256-)
- [balanceOfBatch(accounts, ids)](#ERC1155-balanceOfBatch-address---uint256---)
- [setApprovalForAll(operator, approved)](#ERC1155-setApprovalForAll-address-bool-)
- [isApprovedForAll(account, operator)](#ERC1155-isApprovedForAll-address-address-)
- [safeTransferFrom(from, to, id, amount, data)](#ERC1155-safeTransferFrom-address-address-uint256-uint256-bytes-)
- [safeBatchTransferFrom(from, to, ids, amounts, data)](#ERC1155-safeBatchTransferFrom-address-address-uint256---uint256---bytes-)
- [_safeTransferFrom(from, to, id, amount, data)](#ERC1155-_safeTransferFrom-address-address-uint256-uint256-bytes-)
- [_safeBatchTransferFrom(from, to, ids, amounts, data)](#ERC1155-_safeBatchTransferFrom-address-address-uint256---uint256---bytes-)
- [_setURI(newuri)](#ERC1155-_setURI-string-)
- [_mint(to, id, amount, data)](#ERC1155-_mint-address-uint256-uint256-bytes-)
- [_mintBatch(to, ids, amounts, data)](#ERC1155-_mintBatch-address-uint256---uint256---bytes-)
- [_burn(from, id, amount)](#ERC1155-_burn-address-uint256-uint256-)
- [_burnBatch(from, ids, amounts)](#ERC1155-_burnBatch-address-uint256---uint256---)
- [_setApprovalForAll(owner, operator, approved)](#ERC1155-_setApprovalForAll-address-address-bool-)
- [_beforeTokenTransfer(operator, from, to, ids, amounts, data)](#ERC1155-_beforeTokenTransfer-address-address-address-uint256---uint256---bytes-)
- [_afterTokenTransfer(operator, from, to, ids, amounts, data)](#ERC1155-_afterTokenTransfer-address-address-address-uint256---uint256---bytes-)
#### IERC1155MetadataURI
#### IERC1155
#### ERC165
#### IERC165
</div>
</div>

<div className="bg-secondary p-4 rounded-md mb-6">
<h3 style={{ marginTop: "0"}}>Events</h3>
<div className="font-mono">
#### IERC1155MetadataURI
#### IERC1155
- [TransferSingle(operator, from, to, id, value)](#IERC1155-TransferSingle-address-address-address-uint256-uint256-)
- [TransferBatch(operator, from, to, ids, values)](#IERC1155-TransferBatch-address-address-address-uint256---uint256---)
- [ApprovalForAll(account, operator, approved)](#IERC1155-ApprovalForAll-address-address-bool-)
- [URI(value, id)](#IERC1155-URI-string-uint256-)
#### ERC165
#### IERC165
</div>
</div>

<a id="ERC1155-constructor-string-"></a>

<div className="border rounded-md mb-4">
<div className="bg-secondary flex w-full justify-between px-4">
<p className="font-bold text-sm font-mono">constructor(string uri_)</p>
<div className="flex flex-row items-center gap-2">
<p className="font-light text-sm">public</p>
<a className="peer" data-card href="ERC1155-constructor-string-">#</a>
</div>
</div>
<div className="px-4">

See [`ERC1155._setURI`](#ERC1155-_setURI-string-).

</div>
</div>

<a id="ERC1155-supportsInterface-bytes4-"></a>

<div className="border rounded-md mb-4">
<div className="bg-secondary flex w-full justify-between px-4">
<p className="font-bold text-sm font-mono">supportsInterface(bytes4 interfaceId) → bool</p>
<div className="flex flex-row items-center gap-2">
<p className="font-light text-sm">public</p>
<a className="peer" data-card href="ERC1155-supportsInterface-bytes4-">#</a>
</div>
</div>
<div className="px-4">

See [`IERC165.supportsInterface`](../utils#IERC165-supportsInterface-bytes4-).

</div>
</div>

<a id="ERC1155-uri-uint256-"></a>

<div className="border rounded-md mb-4">
<div className="bg-secondary flex w-full justify-between px-4">
<p className="font-bold text-sm font-mono">uri(uint256) → string</p>
<div className="flex flex-row items-center gap-2">
<p className="font-light text-sm">public</p>
<a className="peer" data-card href="ERC1155-uri-uint256-">#</a>
</div>
</div>
<div className="px-4">

See [`IERC1155MetadataURI.uri`](#IERC1155MetadataURI-uri-uint256-).

This implementation returns the same URI for *all* token types. It relies
on the token type ID substitution mechanism
[defined in the EIP](https://eips.ethereum.org/EIPS/eip-1155#metadata).

Clients calling this function must replace the `\{id\}` substring with the
actual token type ID.

</div>
</div>

<a id="ERC1155-balanceOf-address-uint256-"></a>

<div className="border rounded-md mb-4">
<div className="bg-secondary flex w-full justify-between px-4">
<p className="font-bold text-sm font-mono">balanceOf(address account, uint256 id) → uint256</p>
<div className="flex flex-row items-center gap-2">
<p className="font-light text-sm">public</p>
<a className="peer" data-card href="ERC1155-balanceOf-address-uint256-">#</a>
</div>
</div>
<div className="px-4">

See [`IERC1155.balanceOf`](#IERC1155-balanceOf-address-uint256-).

Requirements:

- `account` cannot be the zero address.

</div>
</div>

<a id="ERC1155-balanceOfBatch-address---uint256---"></a>

<div className="border rounded-md mb-4">
<div className="bg-secondary flex w-full justify-between px-4">
<p className="font-bold text-sm font-mono">balanceOfBatch(address[] accounts, uint256[] ids) → uint256[]</p>
<div className="flex flex-row items-center gap-2">
<p className="font-light text-sm">public</p>
<a className="peer" data-card href="ERC1155-balanceOfBatch-address---uint256---">#</a>
</div>
</div>
<div className="px-4">

See [`IERC1155.balanceOfBatch`](#IERC1155-balanceOfBatch-address---uint256---).

Requirements:

- `accounts` and `ids` must have the same length.

</div>
</div>

<a id="ERC1155-setApprovalForAll-address-bool-"></a>

<div className="border rounded-md mb-4">
<div className="bg-secondary flex w-full justify-between px-4">
<p className="font-bold text-sm font-mono">setApprovalForAll(address operator, bool approved)</p>
<div className="flex flex-row items-center gap-2">
<p className="font-light text-sm">public</p>
<a className="peer" data-card href="ERC1155-setApprovalForAll-address-bool-">#</a>
</div>
</div>
<div className="px-4">

See [`IERC1155.setApprovalForAll`](#IERC1155-setApprovalForAll-address-bool-).

</div>
</div>

<a id="ERC1155-isApprovedForAll-address-address-"></a>

<div className="border rounded-md mb-4">
<div className="bg-secondary flex w-full justify-between px-4">
<p className="font-bold text-sm font-mono">isApprovedForAll(address account, address operator) → bool</p>
<div className="flex flex-row items-center gap-2">
<p className="font-light text-sm">public</p>
<a className="peer" data-card href="ERC1155-isApprovedForAll-address-address-">#</a>
</div>
</div>
<div className="px-4">

See [`IERC1155.isApprovedForAll`](#IERC1155-isApprovedForAll-address-address-).

</div>
</div>

<a id="ERC1155-safeTransferFrom-address-address-uint256-uint256-bytes-"></a>

<div className="border rounded-md mb-4">
<div className="bg-secondary flex w-full justify-between px-4">
<p className="font-bold text-sm font-mono">safeTransferFrom(address from, address to, uint256 id, uint256 amount, bytes data)</p>
<div className="flex flex-row items-center gap-2">
<p className="font-light text-sm">public</p>
<a className="peer" data-card href="ERC1155-safeTransferFrom-address-address-uint256-uint256-bytes-">#</a>
</div>
</div>
<div className="px-4">

See [`IERC1155.safeTransferFrom`](#IERC1155-safeTransferFrom-address-address-uint256-uint256-bytes-).

</div>
</div>

<a id="ERC1155-safeBatchTransferFrom-address-address-uint256---uint256---bytes-"></a>

<div className="border rounded-md mb-4">
<div className="bg-secondary flex w-full justify-between px-4">
<p className="font-bold text-sm font-mono">safeBatchTransferFrom(address from, address to, uint256[] ids, uint256[] amounts, bytes data)</p>
<div className="flex flex-row items-center gap-2">
<p className="font-light text-sm">public</p>
<a className="peer" data-card href="ERC1155-safeBatchTransferFrom-address-address-uint256---uint256---bytes-">#</a>
</div>
</div>
<div className="px-4">

See [`IERC1155.safeBatchTransferFrom`](#IERC1155-safeBatchTransferFrom-address-address-uint256---uint256---bytes-).

</div>
</div>

<a id="ERC1155-_safeTransferFrom-address-address-uint256-uint256-bytes-"></a>

<div className="border rounded-md mb-4">
<div className="bg-secondary flex w-full justify-between px-4">
<p className="font-bold text-sm font-mono">_safeTransferFrom(address from, address to, uint256 id, uint256 amount, bytes data)</p>
<div className="flex flex-row items-center gap-2">
<p className="font-light text-sm">internal</p>
<a className="peer" data-card href="ERC1155-_safeTransferFrom-address-address-uint256-uint256-bytes-">#</a>
</div>
</div>
<div className="px-4">

Transfers `amount` tokens of token type `id` from `from` to `to`.

Emits a [`IERC1155.TransferSingle`](#IERC1155-TransferSingle-address-address-address-uint256-uint256-) event.

Requirements:

- `to` cannot be the zero address.
- `from` must have a balance of tokens of type `id` of at least `amount`.
- If `to` refers to a smart contract, it must implement [`IERC1155Receiver.onERC1155Received`](#IERC1155Receiver-onERC1155Received-address-address-uint256-uint256-bytes-) and return the
acceptance magic value.

</div>
</div>

<a id="ERC1155-_safeBatchTransferFrom-address-address-uint256---uint256---bytes-"></a>

<div className="border rounded-md mb-4">
<div className="bg-secondary flex w-full justify-between px-4">
<p className="font-bold text-sm font-mono">_safeBatchTransferFrom(address from, address to, uint256[] ids, uint256[] amounts, bytes data)</p>
<div className="flex flex-row items-center gap-2">
<p className="font-light text-sm">internal</p>
<a className="peer" data-card href="ERC1155-_safeBatchTransferFrom-address-address-uint256---uint256---bytes-">#</a>
</div>
</div>
<div className="px-4">

xref:ROOT:erc1155#batch-operations[Batched] version of [`ERC1155._safeTransferFrom`](#ERC1155-_safeTransferFrom-address-address-uint256-uint256-bytes-).

Emits a [`IERC1155.TransferBatch`](#IERC1155-TransferBatch-address-address-address-uint256---uint256---) event.

Requirements:

- If `to` refers to a smart contract, it must implement [`IERC1155Receiver.onERC1155BatchReceived`](#IERC1155Receiver-onERC1155BatchReceived-address-address-uint256---uint256---bytes-) and return the
acceptance magic value.

</div>
</div>

<a id="ERC1155-_setURI-string-"></a>

<div className="border rounded-md mb-4">
<div className="bg-secondary flex w-full justify-between px-4">
<p className="font-bold text-sm font-mono">_setURI(string newuri)</p>
<div className="flex flex-row items-center gap-2">
<p className="font-light text-sm">internal</p>
<a className="peer" data-card href="ERC1155-_setURI-string-">#</a>
</div>
</div>
<div className="px-4">

Sets a new URI for all token types, by relying on the token type ID
substitution mechanism
[defined in the EIP](https://eips.ethereum.org/EIPS/eip-1155#metadata).

By this mechanism, any occurrence of the `\{id\}` substring in either the
URI or any of the amounts in the JSON file at said URI will be replaced by
clients with the token type ID.

For example, the `https://token-cdn-domain/\{id\}.json` URI would be
interpreted by clients as
`https://token-cdn-domain/000000000000000000000000000000000000000000000000000000000004cce0.json`
for token type ID 0x4cce0.

See [`ERC1155.uri`](#ERC1155-uri-uint256-).

Because these URIs cannot be meaningfully represented by the [`IERC1155.URI`](#IERC1155-URI-string-uint256-) event,
this function emits no events.

</div>
</div>

<a id="ERC1155-_mint-address-uint256-uint256-bytes-"></a>

<div className="border rounded-md mb-4">
<div className="bg-secondary flex w-full justify-between px-4">
<p className="font-bold text-sm font-mono">_mint(address to, uint256 id, uint256 amount, bytes data)</p>
<div className="flex flex-row items-center gap-2">
<p className="font-light text-sm">internal</p>
<a className="peer" data-card href="ERC1155-_mint-address-uint256-uint256-bytes-">#</a>
</div>
</div>
<div className="px-4">

Creates `amount` tokens of token type `id`, and assigns them to `to`.

Emits a [`IERC1155.TransferSingle`](#IERC1155-TransferSingle-address-address-address-uint256-uint256-) event.

Requirements:

- `to` cannot be the zero address.
- If `to` refers to a smart contract, it must implement [`IERC1155Receiver.onERC1155Received`](#IERC1155Receiver-onERC1155Received-address-address-uint256-uint256-bytes-) and return the
acceptance magic value.

</div>
</div>

<a id="ERC1155-_mintBatch-address-uint256---uint256---bytes-"></a>

<div className="border rounded-md mb-4">
<div className="bg-secondary flex w-full justify-between px-4">
<p className="font-bold text-sm font-mono">_mintBatch(address to, uint256[] ids, uint256[] amounts, bytes data)</p>
<div className="flex flex-row items-center gap-2">
<p className="font-light text-sm">internal</p>
<a className="peer" data-card href="ERC1155-_mintBatch-address-uint256---uint256---bytes-">#</a>
</div>
</div>
<div className="px-4">

xref:ROOT:erc1155#batch-operations[Batched] version of [`ERC1155._mint`](#ERC1155-_mint-address-uint256-uint256-bytes-).

Emits a [`IERC1155.TransferBatch`](#IERC1155-TransferBatch-address-address-address-uint256---uint256---) event.

Requirements:

- `ids` and `amounts` must have the same length.
- If `to` refers to a smart contract, it must implement [`IERC1155Receiver.onERC1155BatchReceived`](#IERC1155Receiver-onERC1155BatchReceived-address-address-uint256---uint256---bytes-) and return the
acceptance magic value.

</div>
</div>

<a id="ERC1155-_burn-address-uint256-uint256-"></a>

<div className="border rounded-md mb-4">
<div className="bg-secondary flex w-full justify-between px-4">
<p className="font-bold text-sm font-mono">_burn(address from, uint256 id, uint256 amount)</p>
<div className="flex flex-row items-center gap-2">
<p className="font-light text-sm">internal</p>
<a className="peer" data-card href="ERC1155-_burn-address-uint256-uint256-">#</a>
</div>
</div>
<div className="px-4">

Destroys `amount` tokens of token type `id` from `from`

Emits a [`IERC1155.TransferSingle`](#IERC1155-TransferSingle-address-address-address-uint256-uint256-) event.

Requirements:

- `from` cannot be the zero address.
- `from` must have at least `amount` tokens of token type `id`.

</div>
</div>

<a id="ERC1155-_burnBatch-address-uint256---uint256---"></a>

<div className="border rounded-md mb-4">
<div className="bg-secondary flex w-full justify-between px-4">
<p className="font-bold text-sm font-mono">_burnBatch(address from, uint256[] ids, uint256[] amounts)</p>
<div className="flex flex-row items-center gap-2">
<p className="font-light text-sm">internal</p>
<a className="peer" data-card href="ERC1155-_burnBatch-address-uint256---uint256---">#</a>
</div>
</div>
<div className="px-4">

xref:ROOT:erc1155#batch-operations[Batched] version of [`ERC1155._burn`](#ERC1155-_burn-address-uint256-uint256-).

Emits a [`IERC1155.TransferBatch`](#IERC1155-TransferBatch-address-address-address-uint256---uint256---) event.

Requirements:

- `ids` and `amounts` must have the same length.

</div>
</div>

<a id="ERC1155-_setApprovalForAll-address-address-bool-"></a>

<div className="border rounded-md mb-4">
<div className="bg-secondary flex w-full justify-between px-4">
<p className="font-bold text-sm font-mono">_setApprovalForAll(address owner, address operator, bool approved)</p>
<div className="flex flex-row items-center gap-2">
<p className="font-light text-sm">internal</p>
<a className="peer" data-card href="ERC1155-_setApprovalForAll-address-address-bool-">#</a>
</div>
</div>
<div className="px-4">

Approve `operator` to operate on all of `owner` tokens

Emits an [`IERC1155.ApprovalForAll`](#IERC1155-ApprovalForAll-address-address-bool-) event.

</div>
</div>

<a id="ERC1155-_beforeTokenTransfer-address-address-address-uint256---uint256---bytes-"></a>

<div className="border rounded-md mb-4">
<div className="bg-secondary flex w-full justify-between px-4">
<p className="font-bold text-sm font-mono">_beforeTokenTransfer(address operator, address from, address to, uint256[] ids, uint256[] amounts, bytes data)</p>
<div className="flex flex-row items-center gap-2">
<p className="font-light text-sm">internal</p>
<a className="peer" data-card href="ERC1155-_beforeTokenTransfer-address-address-address-uint256---uint256---bytes-">#</a>
</div>
</div>
<div className="px-4">

Hook that is called before any token transfer. This includes minting
and burning, as well as batched variants.

The same hook is called on both single and batched variants. For single
transfers, the length of the `ids` and `amounts` arrays will be 1.

Calling conditions (for each `id` and `amount` pair):

- When `from` and `to` are both non-zero, `amount` of ``from``'s tokens
of token type `id` will be  transferred to `to`.
- When `from` is zero, `amount` tokens of token type `id` will be minted
for `to`.
- when `to` is zero, `amount` of ``from``'s tokens of token type `id`
will be burned.
- `from` and `to` are never both zero.
- `ids` and `amounts` have the same, non-zero length.

To learn more about hooks, head to xref:ROOT:extending-contracts#using-hooks[Using Hooks].

</div>
</div>

<a id="ERC1155-_afterTokenTransfer-address-address-address-uint256---uint256---bytes-"></a>

<div className="border rounded-md mb-4">
<div className="bg-secondary flex w-full justify-between px-4">
<p className="font-bold text-sm font-mono">_afterTokenTransfer(address operator, address from, address to, uint256[] ids, uint256[] amounts, bytes data)</p>
<div className="flex flex-row items-center gap-2">
<p className="font-light text-sm">internal</p>
<a className="peer" data-card href="ERC1155-_afterTokenTransfer-address-address-address-uint256---uint256---bytes-">#</a>
</div>
</div>
<div className="px-4">

Hook that is called after any token transfer. This includes minting
and burning, as well as batched variants.

The same hook is called on both single and batched variants. For single
transfers, the length of the `id` and `amount` arrays will be 1.

Calling conditions (for each `id` and `amount` pair):

- When `from` and `to` are both non-zero, `amount` of ``from``'s tokens
of token type `id` will be  transferred to `to`.
- When `from` is zero, `amount` tokens of token type `id` will be minted
for `to`.
- when `to` is zero, `amount` of ``from``'s tokens of token type `id`
will be burned.
- `from` and `to` are never both zero.
- `ids` and `amounts` have the same, non-zero length.

To learn more about hooks, head to xref:ROOT:extending-contracts#using-hooks[Using Hooks].

</div>
</div>

<a id="IERC1155"></a>

<div style={{marginTop: "4em"}} className="w-full flex flex-row items-center justify-between">

## `IERC1155`

<a target="_blank" style={{marginTop: "1.5em"}} href="https://github.com/OpenZeppelin/openzeppelin-contracts/blob/v4.9.6/contracts/token/ERC1155/IERC1155.sol">
<svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="lucide lucide-github-icon lucide-github"><path d="M15 22v-4a4.8 4.8 0 0 0-1-3.5c3 0 6-2 6-5.5.08-1.25-.27-2.48-1-3.5.28-1.15.28-2.35 0-3.5 0 0-1 0-3 1.5-2.64-.5-5.36-.5-8 0C6 2 5 2 5 2c-.3 1.15-.3 2.35 0 3.5A5.403 5.403 0 0 0 4 9c0 3.5 3 5.5 6 5.5-.39.49-.68 1.05-.85 1.65-.17.6-.22 1.23-.15 1.85v4"/><path d="M9 18c-4.51 2-5-2-7-2"/></svg>
</a>

</div>

```solidity
import "@openzeppelin/contracts/token/ERC1155/IERC1155.sol";
```

Required interface of an ERC1155 compliant contract, as defined in the
[EIP](https://eips.ethereum.org/EIPS/eip-1155).

_Available since v3.1._

<div className="bg-secondary p-4 rounded-md mb-6">
<h3 style={{ marginTop: "0"}}>Functions</h3>
<div className="font-mono">
- [balanceOf(account, id)](#IERC1155-balanceOf-address-uint256-)
- [balanceOfBatch(accounts, ids)](#IERC1155-balanceOfBatch-address---uint256---)
- [setApprovalForAll(operator, approved)](#IERC1155-setApprovalForAll-address-bool-)
- [isApprovedForAll(account, operator)](#IERC1155-isApprovedForAll-address-address-)
- [safeTransferFrom(from, to, id, amount, data)](#IERC1155-safeTransferFrom-address-address-uint256-uint256-bytes-)
- [safeBatchTransferFrom(from, to, ids, amounts, data)](#IERC1155-safeBatchTransferFrom-address-address-uint256---uint256---bytes-)
#### IERC165
- [supportsInterface(interfaceId)](#IERC165-supportsInterface-bytes4-)
</div>
</div>

<div className="bg-secondary p-4 rounded-md mb-6">
<h3 style={{ marginTop: "0"}}>Events</h3>
<div className="font-mono">
- [TransferSingle(operator, from, to, id, value)](#IERC1155-TransferSingle-address-address-address-uint256-uint256-)
- [TransferBatch(operator, from, to, ids, values)](#IERC1155-TransferBatch-address-address-address-uint256---uint256---)
- [ApprovalForAll(account, operator, approved)](#IERC1155-ApprovalForAll-address-address-bool-)
- [URI(value, id)](#IERC1155-URI-string-uint256-)
#### IERC165
</div>
</div>

<a id="IERC1155-balanceOf-address-uint256-"></a>

<div className="border rounded-md mb-4">
<div className="bg-secondary flex w-full justify-between px-4">
<p className="font-bold text-sm font-mono">balanceOf(address account, uint256 id) → uint256</p>
<div className="flex flex-row items-center gap-2">
<p className="font-light text-sm">external</p>
<a className="peer" data-card href="IERC1155-balanceOf-address-uint256-">#</a>
</div>
</div>
<div className="px-4">

Returns the amount of tokens of token type `id` owned by `account`.

Requirements:

- `account` cannot be the zero address.

</div>
</div>

<a id="IERC1155-balanceOfBatch-address---uint256---"></a>

<div className="border rounded-md mb-4">
<div className="bg-secondary flex w-full justify-between px-4">
<p className="font-bold text-sm font-mono">balanceOfBatch(address[] accounts, uint256[] ids) → uint256[]</p>
<div className="flex flex-row items-center gap-2">
<p className="font-light text-sm">external</p>
<a className="peer" data-card href="IERC1155-balanceOfBatch-address---uint256---">#</a>
</div>
</div>
<div className="px-4">

xref:ROOT:erc1155#batch-operations[Batched] version of [`ERC1155.balanceOf`](#ERC1155-balanceOf-address-uint256-).

Requirements:

- `accounts` and `ids` must have the same length.

</div>
</div>

<a id="IERC1155-setApprovalForAll-address-bool-"></a>

<div className="border rounded-md mb-4">
<div className="bg-secondary flex w-full justify-between px-4">
<p className="font-bold text-sm font-mono">setApprovalForAll(address operator, bool approved)</p>
<div className="flex flex-row items-center gap-2">
<p className="font-light text-sm">external</p>
<a className="peer" data-card href="IERC1155-setApprovalForAll-address-bool-">#</a>
</div>
</div>
<div className="px-4">

Grants or revokes permission to `operator` to transfer the caller's tokens, according to `approved`,

Emits an [`IERC1155.ApprovalForAll`](#IERC1155-ApprovalForAll-address-address-bool-) event.

Requirements:

- `operator` cannot be the caller.

</div>
</div>

<a id="IERC1155-isApprovedForAll-address-address-"></a>

<div className="border rounded-md mb-4">
<div className="bg-secondary flex w-full justify-between px-4">
<p className="font-bold text-sm font-mono">isApprovedForAll(address account, address operator) → bool</p>
<div className="flex flex-row items-center gap-2">
<p className="font-light text-sm">external</p>
<a className="peer" data-card href="IERC1155-isApprovedForAll-address-address-">#</a>
</div>
</div>
<div className="px-4">

Returns true if `operator` is approved to transfer ``account``'s tokens.

See [`ERC1155.setApprovalForAll`](#ERC1155-setApprovalForAll-address-bool-).

</div>
</div>

<a id="IERC1155-safeTransferFrom-address-address-uint256-uint256-bytes-"></a>

<div className="border rounded-md mb-4">
<div className="bg-secondary flex w-full justify-between px-4">
<p className="font-bold text-sm font-mono">safeTransferFrom(address from, address to, uint256 id, uint256 amount, bytes data)</p>
<div className="flex flex-row items-center gap-2">
<p className="font-light text-sm">external</p>
<a className="peer" data-card href="IERC1155-safeTransferFrom-address-address-uint256-uint256-bytes-">#</a>
</div>
</div>
<div className="px-4">

Transfers `amount` tokens of token type `id` from `from` to `to`.

Emits a [`IERC1155.TransferSingle`](#IERC1155-TransferSingle-address-address-address-uint256-uint256-) event.

Requirements:

- `to` cannot be the zero address.
- If the caller is not `from`, it must have been approved to spend ``from``'s tokens via [`ERC1155.setApprovalForAll`](#ERC1155-setApprovalForAll-address-bool-).
- `from` must have a balance of tokens of type `id` of at least `amount`.
- If `to` refers to a smart contract, it must implement [`IERC1155Receiver.onERC1155Received`](#IERC1155Receiver-onERC1155Received-address-address-uint256-uint256-bytes-) and return the
acceptance magic value.

</div>
</div>

<a id="IERC1155-safeBatchTransferFrom-address-address-uint256---uint256---bytes-"></a>

<div className="border rounded-md mb-4">
<div className="bg-secondary flex w-full justify-between px-4">
<p className="font-bold text-sm font-mono">safeBatchTransferFrom(address from, address to, uint256[] ids, uint256[] amounts, bytes data)</p>
<div className="flex flex-row items-center gap-2">
<p className="font-light text-sm">external</p>
<a className="peer" data-card href="IERC1155-safeBatchTransferFrom-address-address-uint256---uint256---bytes-">#</a>
</div>
</div>
<div className="px-4">

xref:ROOT:erc1155#batch-operations[Batched] version of [`ERC1155.safeTransferFrom`](#ERC1155-safeTransferFrom-address-address-uint256-uint256-bytes-).

Emits a [`IERC1155.TransferBatch`](#IERC1155-TransferBatch-address-address-address-uint256---uint256---) event.

Requirements:

- `ids` and `amounts` must have the same length.
- If `to` refers to a smart contract, it must implement [`IERC1155Receiver.onERC1155BatchReceived`](#IERC1155Receiver-onERC1155BatchReceived-address-address-uint256---uint256---bytes-) and return the
acceptance magic value.

</div>
</div>

<a id="IERC1155-TransferSingle-address-address-address-uint256-uint256-"></a>

<div className="border rounded-md mb-4">
<div className="bg-secondary flex w-full justify-between px-4">
<p className="font-bold text-sm font-mono">TransferSingle(address indexed operator, address indexed from, address indexed to, uint256 id, uint256 value)</p>
<div className="flex flex-row items-center gap-2">
<p className="font-light text-sm">event</p>
<a className="peer" data-card href="IERC1155-TransferSingle-address-address-address-uint256-uint256-">#</a>
</div>
</div>

<div className="px-4">

Emitted when `value` tokens of token type `id` are transferred from `from` to `to` by `operator`.

</div>
</div>
<a id="IERC1155-TransferBatch-address-address-address-uint256---uint256---"></a>

<div className="border rounded-md mb-4">
<div className="bg-secondary flex w-full justify-between px-4">
<p className="font-bold text-sm font-mono">TransferBatch(address indexed operator, address indexed from, address indexed to, uint256[] ids, uint256[] values)</p>
<div className="flex flex-row items-center gap-2">
<p className="font-light text-sm">event</p>
<a className="peer" data-card href="IERC1155-TransferBatch-address-address-address-uint256---uint256---">#</a>
</div>
</div>

<div className="px-4">

Equivalent to multiple [`IERC1155.TransferSingle`](#IERC1155-TransferSingle-address-address-address-uint256-uint256-) events, where `operator`, `from` and `to` are the same for all
transfers.

</div>
</div>
<a id="IERC1155-ApprovalForAll-address-address-bool-"></a>

<div className="border rounded-md mb-4">
<div className="bg-secondary flex w-full justify-between px-4">
<p className="font-bold text-sm font-mono">ApprovalForAll(address indexed account, address indexed operator, bool approved)</p>
<div className="flex flex-row items-center gap-2">
<p className="font-light text-sm">event</p>
<a className="peer" data-card href="IERC1155-ApprovalForAll-address-address-bool-">#</a>
</div>
</div>

<div className="px-4">

Emitted when `account` grants or revokes permission to `operator` to transfer their tokens, according to
`approved`.

</div>
</div>
<a id="IERC1155-URI-string-uint256-"></a>

<div className="border rounded-md mb-4">
<div className="bg-secondary flex w-full justify-between px-4">
<p className="font-bold text-sm font-mono">URI(string value, uint256 indexed id)</p>
<div className="flex flex-row items-center gap-2">
<p className="font-light text-sm">event</p>
<a className="peer" data-card href="IERC1155-URI-string-uint256-">#</a>
</div>
</div>

<div className="px-4">

Emitted when the URI for token type `id` changes to `value`, if it is a non-programmatic URI.

If an [`IERC1155.URI`](#IERC1155-URI-string-uint256-) event was emitted for `id`, the standard
[guarantees](https://eips.ethereum.org/EIPS/eip-1155#metadata-extensions) that `value` will equal the value
returned by [`IERC1155MetadataURI.uri`](#IERC1155MetadataURI-uri-uint256-).

</div>
</div>

<a id="IERC1155Receiver"></a>

<div style={{marginTop: "4em"}} className="w-full flex flex-row items-center justify-between">

## `IERC1155Receiver`

<a target="_blank" style={{marginTop: "1.5em"}} href="https://github.com/OpenZeppelin/openzeppelin-contracts/blob/v4.9.6/contracts/token/ERC1155/IERC1155Receiver.sol">
<svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="lucide lucide-github-icon lucide-github"><path d="M15 22v-4a4.8 4.8 0 0 0-1-3.5c3 0 6-2 6-5.5.08-1.25-.27-2.48-1-3.5.28-1.15.28-2.35 0-3.5 0 0-1 0-3 1.5-2.64-.5-5.36-.5-8 0C6 2 5 2 5 2c-.3 1.15-.3 2.35 0 3.5A5.403 5.403 0 0 0 4 9c0 3.5 3 5.5 6 5.5-.39.49-.68 1.05-.85 1.65-.17.6-.22 1.23-.15 1.85v4"/><path d="M9 18c-4.51 2-5-2-7-2"/></svg>
</a>

</div>

```solidity
import "@openzeppelin/contracts/token/ERC1155/IERC1155Receiver.sol";
```

_Available since v3.1._

<div className="bg-secondary p-4 rounded-md mb-6">
<h3 style={{ marginTop: "0"}}>Functions</h3>
<div className="font-mono">
- [onERC1155Received(operator, from, id, value, data)](#IERC1155Receiver-onERC1155Received-address-address-uint256-uint256-bytes-)
- [onERC1155BatchReceived(operator, from, ids, values, data)](#IERC1155Receiver-onERC1155BatchReceived-address-address-uint256---uint256---bytes-)
#### IERC165
- [supportsInterface(interfaceId)](#IERC165-supportsInterface-bytes4-)
</div>
</div>

<a id="IERC1155Receiver-onERC1155Received-address-address-uint256-uint256-bytes-"></a>

<div className="border rounded-md mb-4">
<div className="bg-secondary flex w-full justify-between px-4">
<p className="font-bold text-sm font-mono">onERC1155Received(address operator, address from, uint256 id, uint256 value, bytes data) → bytes4</p>
<div className="flex flex-row items-center gap-2">
<p className="font-light text-sm">external</p>
<a className="peer" data-card href="IERC1155Receiver-onERC1155Received-address-address-uint256-uint256-bytes-">#</a>
</div>
</div>
<div className="px-4">

Handles the receipt of a single ERC1155 token type. This function is
called at the end of a `safeTransferFrom` after the balance has been updated.

NOTE: To accept the transfer, this must return
`bytes4(keccak256("onERC1155Received(address,address,uint256,uint256,bytes)"))`
(i.e. 0xf23a6e61, or its own function selector).

</div>
</div>

<a id="IERC1155Receiver-onERC1155BatchReceived-address-address-uint256---uint256---bytes-"></a>

<div className="border rounded-md mb-4">
<div className="bg-secondary flex w-full justify-between px-4">
<p className="font-bold text-sm font-mono">onERC1155BatchReceived(address operator, address from, uint256[] ids, uint256[] values, bytes data) → bytes4</p>
<div className="flex flex-row items-center gap-2">
<p className="font-light text-sm">external</p>
<a className="peer" data-card href="IERC1155Receiver-onERC1155BatchReceived-address-address-uint256---uint256---bytes-">#</a>
</div>
</div>
<div className="px-4">

Handles the receipt of a multiple ERC1155 token types. This function
is called at the end of a `safeBatchTransferFrom` after the balances have
been updated.

NOTE: To accept the transfer(s), this must return
`bytes4(keccak256("onERC1155BatchReceived(address,address,uint256[],uint256[],bytes)"))`
(i.e. 0xbc197c81, or its own function selector).

</div>
</div>

<a id="ERC1155Burnable"></a>

<div style={{marginTop: "4em"}} className="w-full flex flex-row items-center justify-between">

## `ERC1155Burnable`

<a target="_blank" style={{marginTop: "1.5em"}} href="https://github.com/OpenZeppelin/openzeppelin-contracts/blob/v4.9.6/contracts/token/ERC1155/extensions/ERC1155Burnable.sol">
<svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="lucide lucide-github-icon lucide-github"><path d="M15 22v-4a4.8 4.8 0 0 0-1-3.5c3 0 6-2 6-5.5.08-1.25-.27-2.48-1-3.5.28-1.15.28-2.35 0-3.5 0 0-1 0-3 1.5-2.64-.5-5.36-.5-8 0C6 2 5 2 5 2c-.3 1.15-.3 2.35 0 3.5A5.403 5.403 0 0 0 4 9c0 3.5 3 5.5 6 5.5-.39.49-.68 1.05-.85 1.65-.17.6-.22 1.23-.15 1.85v4"/><path d="M9 18c-4.51 2-5-2-7-2"/></svg>
</a>

</div>

```solidity
import "@openzeppelin/contracts/token/ERC1155/extensions/ERC1155Burnable.sol";
```

Extension of [`ERC1155`](#ERC1155) that allows token holders to destroy both their
own tokens and those that they have been approved to use.

_Available since v3.1._

<div className="bg-secondary p-4 rounded-md mb-6">
<h3 style={{ marginTop: "0"}}>Functions</h3>
<div className="font-mono">
- [burn(account, id, value)](#ERC1155Burnable-burn-address-uint256-uint256-)
- [burnBatch(account, ids, values)](#ERC1155Burnable-burnBatch-address-uint256---uint256---)
#### ERC1155
- [supportsInterface(interfaceId)](#ERC1155-supportsInterface-bytes4-)
- [uri()](#ERC1155-uri-uint256-)
- [balanceOf(account, id)](#ERC1155-balanceOf-address-uint256-)
- [balanceOfBatch(accounts, ids)](#ERC1155-balanceOfBatch-address---uint256---)
- [setApprovalForAll(operator, approved)](#ERC1155-setApprovalForAll-address-bool-)
- [isApprovedForAll(account, operator)](#ERC1155-isApprovedForAll-address-address-)
- [safeTransferFrom(from, to, id, amount, data)](#ERC1155-safeTransferFrom-address-address-uint256-uint256-bytes-)
- [safeBatchTransferFrom(from, to, ids, amounts, data)](#ERC1155-safeBatchTransferFrom-address-address-uint256---uint256---bytes-)
- [_safeTransferFrom(from, to, id, amount, data)](#ERC1155-_safeTransferFrom-address-address-uint256-uint256-bytes-)
- [_safeBatchTransferFrom(from, to, ids, amounts, data)](#ERC1155-_safeBatchTransferFrom-address-address-uint256---uint256---bytes-)
- [_setURI(newuri)](#ERC1155-_setURI-string-)
- [_mint(to, id, amount, data)](#ERC1155-_mint-address-uint256-uint256-bytes-)
- [_mintBatch(to, ids, amounts, data)](#ERC1155-_mintBatch-address-uint256---uint256---bytes-)
- [_burn(from, id, amount)](#ERC1155-_burn-address-uint256-uint256-)
- [_burnBatch(from, ids, amounts)](#ERC1155-_burnBatch-address-uint256---uint256---)
- [_setApprovalForAll(owner, operator, approved)](#ERC1155-_setApprovalForAll-address-address-bool-)
- [_beforeTokenTransfer(operator, from, to, ids, amounts, data)](#ERC1155-_beforeTokenTransfer-address-address-address-uint256---uint256---bytes-)
- [_afterTokenTransfer(operator, from, to, ids, amounts, data)](#ERC1155-_afterTokenTransfer-address-address-address-uint256---uint256---bytes-)
#### IERC1155MetadataURI
#### IERC1155
#### ERC165
#### IERC165
</div>
</div>

<div className="bg-secondary p-4 rounded-md mb-6">
<h3 style={{ marginTop: "0"}}>Events</h3>
<div className="font-mono">
#### ERC1155
#### IERC1155MetadataURI
#### IERC1155
- [TransferSingle(operator, from, to, id, value)](#IERC1155-TransferSingle-address-address-address-uint256-uint256-)
- [TransferBatch(operator, from, to, ids, values)](#IERC1155-TransferBatch-address-address-address-uint256---uint256---)
- [ApprovalForAll(account, operator, approved)](#IERC1155-ApprovalForAll-address-address-bool-)
- [URI(value, id)](#IERC1155-URI-string-uint256-)
#### ERC165
#### IERC165
</div>
</div>

<a id="ERC1155Burnable-burn-address-uint256-uint256-"></a>

<div className="border rounded-md mb-4">
<div className="bg-secondary flex w-full justify-between px-4">
<p className="font-bold text-sm font-mono">burn(address account, uint256 id, uint256 value)</p>
<div className="flex flex-row items-center gap-2">
<p className="font-light text-sm">public</p>
<a className="peer" data-card href="ERC1155Burnable-burn-address-uint256-uint256-">#</a>
</div>
</div>
<div className="px-4">

</div>
</div>

<a id="ERC1155Burnable-burnBatch-address-uint256---uint256---"></a>

<div className="border rounded-md mb-4">
<div className="bg-secondary flex w-full justify-between px-4">
<p className="font-bold text-sm font-mono">burnBatch(address account, uint256[] ids, uint256[] values)</p>
<div className="flex flex-row items-center gap-2">
<p className="font-light text-sm">public</p>
<a className="peer" data-card href="ERC1155Burnable-burnBatch-address-uint256---uint256---">#</a>
</div>
</div>
<div className="px-4">

</div>
</div>

<a id="ERC1155Pausable"></a>

<div style={{marginTop: "4em"}} className="w-full flex flex-row items-center justify-between">

## `ERC1155Pausable`

<a target="_blank" style={{marginTop: "1.5em"}} href="https://github.com/OpenZeppelin/openzeppelin-contracts/blob/v4.9.6/contracts/token/ERC1155/extensions/ERC1155Pausable.sol">
<svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="lucide lucide-github-icon lucide-github"><path d="M15 22v-4a4.8 4.8 0 0 0-1-3.5c3 0 6-2 6-5.5.08-1.25-.27-2.48-1-3.5.28-1.15.28-2.35 0-3.5 0 0-1 0-3 1.5-2.64-.5-5.36-.5-8 0C6 2 5 2 5 2c-.3 1.15-.3 2.35 0 3.5A5.403 5.403 0 0 0 4 9c0 3.5 3 5.5 6 5.5-.39.49-.68 1.05-.85 1.65-.17.6-.22 1.23-.15 1.85v4"/><path d="M9 18c-4.51 2-5-2-7-2"/></svg>
</a>

</div>

```solidity
import "@openzeppelin/contracts/token/ERC1155/extensions/ERC1155Pausable.sol";
```

ERC1155 token with pausable token transfers, minting and burning.

Useful for scenarios such as preventing trades until the end of an evaluation
period, or having an emergency switch for freezing all token transfers in the
event of a large bug.

<Callout type="warn">
This contract does not include public pause and unpause functions. In
addition to inheriting this contract, you must define both functions, invoking the
[`Pausable._pause`](../security#Pausable-_pause--) and [`Pausable._unpause`](../security#Pausable-_unpause--) internal functions, with appropriate
access control, e.g. using [`AccessControl`](../access#AccessControl) or [`Ownable`](../access#Ownable). Not doing so will
make the contract unpausable.
</Callout>

_Available since v3.1._

<div className="bg-secondary p-4 rounded-md mb-6">
<h3 style={{ marginTop: "0"}}>Functions</h3>
<div className="font-mono">
- [_beforeTokenTransfer(operator, from, to, ids, amounts, data)](#ERC1155Pausable-_beforeTokenTransfer-address-address-address-uint256---uint256---bytes-)
#### Pausable
- [paused()](#Pausable-paused--)
- [_requireNotPaused()](#Pausable-_requireNotPaused--)
- [_requirePaused()](#Pausable-_requirePaused--)
- [_pause()](#Pausable-_pause--)
- [_unpause()](#Pausable-_unpause--)
#### ERC1155
- [supportsInterface(interfaceId)](#ERC1155-supportsInterface-bytes4-)
- [uri()](#ERC1155-uri-uint256-)
- [balanceOf(account, id)](#ERC1155-balanceOf-address-uint256-)
- [balanceOfBatch(accounts, ids)](#ERC1155-balanceOfBatch-address---uint256---)
- [setApprovalForAll(operator, approved)](#ERC1155-setApprovalForAll-address-bool-)
- [isApprovedForAll(account, operator)](#ERC1155-isApprovedForAll-address-address-)
- [safeTransferFrom(from, to, id, amount, data)](#ERC1155-safeTransferFrom-address-address-uint256-uint256-bytes-)
- [safeBatchTransferFrom(from, to, ids, amounts, data)](#ERC1155-safeBatchTransferFrom-address-address-uint256---uint256---bytes-)
- [_safeTransferFrom(from, to, id, amount, data)](#ERC1155-_safeTransferFrom-address-address-uint256-uint256-bytes-)
- [_safeBatchTransferFrom(from, to, ids, amounts, data)](#ERC1155-_safeBatchTransferFrom-address-address-uint256---uint256---bytes-)
- [_setURI(newuri)](#ERC1155-_setURI-string-)
- [_mint(to, id, amount, data)](#ERC1155-_mint-address-uint256-uint256-bytes-)
- [_mintBatch(to, ids, amounts, data)](#ERC1155-_mintBatch-address-uint256---uint256---bytes-)
- [_burn(from, id, amount)](#ERC1155-_burn-address-uint256-uint256-)
- [_burnBatch(from, ids, amounts)](#ERC1155-_burnBatch-address-uint256---uint256---)
- [_setApprovalForAll(owner, operator, approved)](#ERC1155-_setApprovalForAll-address-address-bool-)
- [_afterTokenTransfer(operator, from, to, ids, amounts, data)](#ERC1155-_afterTokenTransfer-address-address-address-uint256---uint256---bytes-)
#### IERC1155MetadataURI
#### IERC1155
#### ERC165
#### IERC165
</div>
</div>

<div className="bg-secondary p-4 rounded-md mb-6">
<h3 style={{ marginTop: "0"}}>Events</h3>
<div className="font-mono">
#### Pausable
- [Paused(account)](#Pausable-Paused-address-)
- [Unpaused(account)](#Pausable-Unpaused-address-)
#### ERC1155
#### IERC1155MetadataURI
#### IERC1155
- [TransferSingle(operator, from, to, id, value)](#IERC1155-TransferSingle-address-address-address-uint256-uint256-)
- [TransferBatch(operator, from, to, ids, values)](#IERC1155-TransferBatch-address-address-address-uint256---uint256---)
- [ApprovalForAll(account, operator, approved)](#IERC1155-ApprovalForAll-address-address-bool-)
- [URI(value, id)](#IERC1155-URI-string-uint256-)
#### ERC165
#### IERC165
</div>
</div>

<a id="ERC1155Pausable-_beforeTokenTransfer-address-address-address-uint256---uint256---bytes-"></a>

<div className="border rounded-md mb-4">
<div className="bg-secondary flex w-full justify-between px-4">
<p className="font-bold text-sm font-mono">_beforeTokenTransfer(address operator, address from, address to, uint256[] ids, uint256[] amounts, bytes data)</p>
<div className="flex flex-row items-center gap-2">
<p className="font-light text-sm">internal</p>
<a className="peer" data-card href="ERC1155Pausable-_beforeTokenTransfer-address-address-address-uint256---uint256---bytes-">#</a>
</div>
</div>
<div className="px-4">

See [`ERC1155._beforeTokenTransfer`](#ERC1155-_beforeTokenTransfer-address-address-address-uint256---uint256---bytes-).

Requirements:

- the contract must not be paused.

</div>
</div>

<a id="ERC1155Supply"></a>

<div style={{marginTop: "4em"}} className="w-full flex flex-row items-center justify-between">

## `ERC1155Supply`

<a target="_blank" style={{marginTop: "1.5em"}} href="https://github.com/OpenZeppelin/openzeppelin-contracts/blob/v4.9.6/contracts/token/ERC1155/extensions/ERC1155Supply.sol">
<svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="lucide lucide-github-icon lucide-github"><path d="M15 22v-4a4.8 4.8 0 0 0-1-3.5c3 0 6-2 6-5.5.08-1.25-.27-2.48-1-3.5.28-1.15.28-2.35 0-3.5 0 0-1 0-3 1.5-2.64-.5-5.36-.5-8 0C6 2 5 2 5 2c-.3 1.15-.3 2.35 0 3.5A5.403 5.403 0 0 0 4 9c0 3.5 3 5.5 6 5.5-.39.49-.68 1.05-.85 1.65-.17.6-.22 1.23-.15 1.85v4"/><path d="M9 18c-4.51 2-5-2-7-2"/></svg>
</a>

</div>

```solidity
import "@openzeppelin/contracts/token/ERC1155/extensions/ERC1155Supply.sol";
```

Extension of ERC1155 that adds tracking of total supply per id.

Useful for scenarios where Fungible and Non-fungible tokens have to be
clearly identified. Note: While a totalSupply of 1 might mean the
corresponding is an NFT, there is no guarantees that no other token with the
same id are not going to be minted.

<div className="bg-secondary p-4 rounded-md mb-6">
<h3 style={{ marginTop: "0"}}>Functions</h3>
<div className="font-mono">
- [totalSupply(id)](#ERC1155Supply-totalSupply-uint256-)
- [exists(id)](#ERC1155Supply-exists-uint256-)
- [_beforeTokenTransfer(operator, from, to, ids, amounts, data)](#ERC1155Supply-_beforeTokenTransfer-address-address-address-uint256---uint256---bytes-)
#### ERC1155
- [supportsInterface(interfaceId)](#ERC1155-supportsInterface-bytes4-)
- [uri()](#ERC1155-uri-uint256-)
- [balanceOf(account, id)](#ERC1155-balanceOf-address-uint256-)
- [balanceOfBatch(accounts, ids)](#ERC1155-balanceOfBatch-address---uint256---)
- [setApprovalForAll(operator, approved)](#ERC1155-setApprovalForAll-address-bool-)
- [isApprovedForAll(account, operator)](#ERC1155-isApprovedForAll-address-address-)
- [safeTransferFrom(from, to, id, amount, data)](#ERC1155-safeTransferFrom-address-address-uint256-uint256-bytes-)
- [safeBatchTransferFrom(from, to, ids, amounts, data)](#ERC1155-safeBatchTransferFrom-address-address-uint256---uint256---bytes-)
- [_safeTransferFrom(from, to, id, amount, data)](#ERC1155-_safeTransferFrom-address-address-uint256-uint256-bytes-)
- [_safeBatchTransferFrom(from, to, ids, amounts, data)](#ERC1155-_safeBatchTransferFrom-address-address-uint256---uint256---bytes-)
- [_setURI(newuri)](#ERC1155-_setURI-string-)
- [_mint(to, id, amount, data)](#ERC1155-_mint-address-uint256-uint256-bytes-)
- [_mintBatch(to, ids, amounts, data)](#ERC1155-_mintBatch-address-uint256---uint256---bytes-)
- [_burn(from, id, amount)](#ERC1155-_burn-address-uint256-uint256-)
- [_burnBatch(from, ids, amounts)](#ERC1155-_burnBatch-address-uint256---uint256---)
- [_setApprovalForAll(owner, operator, approved)](#ERC1155-_setApprovalForAll-address-address-bool-)
- [_afterTokenTransfer(operator, from, to, ids, amounts, data)](#ERC1155-_afterTokenTransfer-address-address-address-uint256---uint256---bytes-)
#### IERC1155MetadataURI
#### IERC1155
#### ERC165
#### IERC165
</div>
</div>

<div className="bg-secondary p-4 rounded-md mb-6">
<h3 style={{ marginTop: "0"}}>Events</h3>
<div className="font-mono">
#### ERC1155
#### IERC1155MetadataURI
#### IERC1155
- [TransferSingle(operator, from, to, id, value)](#IERC1155-TransferSingle-address-address-address-uint256-uint256-)
- [TransferBatch(operator, from, to, ids, values)](#IERC1155-TransferBatch-address-address-address-uint256---uint256---)
- [ApprovalForAll(account, operator, approved)](#IERC1155-ApprovalForAll-address-address-bool-)
- [URI(value, id)](#IERC1155-URI-string-uint256-)
#### ERC165
#### IERC165
</div>
</div>

<a id="ERC1155Supply-totalSupply-uint256-"></a>

<div className="border rounded-md mb-4">
<div className="bg-secondary flex w-full justify-between px-4">
<p className="font-bold text-sm font-mono">totalSupply(uint256 id) → uint256</p>
<div className="flex flex-row items-center gap-2">
<p className="font-light text-sm">public</p>
<a className="peer" data-card href="ERC1155Supply-totalSupply-uint256-">#</a>
</div>
</div>
<div className="px-4">

Total amount of tokens in with a given id.

</div>
</div>

<a id="ERC1155Supply-exists-uint256-"></a>

<div className="border rounded-md mb-4">
<div className="bg-secondary flex w-full justify-between px-4">
<p className="font-bold text-sm font-mono">exists(uint256 id) → bool</p>
<div className="flex flex-row items-center gap-2">
<p className="font-light text-sm">public</p>
<a className="peer" data-card href="ERC1155Supply-exists-uint256-">#</a>
</div>
</div>
<div className="px-4">

Indicates whether any token exist with a given id, or not.

</div>
</div>

<a id="ERC1155Supply-_beforeTokenTransfer-address-address-address-uint256---uint256---bytes-"></a>

<div className="border rounded-md mb-4">
<div className="bg-secondary flex w-full justify-between px-4">
<p className="font-bold text-sm font-mono">_beforeTokenTransfer(address operator, address from, address to, uint256[] ids, uint256[] amounts, bytes data)</p>
<div className="flex flex-row items-center gap-2">
<p className="font-light text-sm">internal</p>
<a className="peer" data-card href="ERC1155Supply-_beforeTokenTransfer-address-address-address-uint256---uint256---bytes-">#</a>
</div>
</div>
<div className="px-4">

See [`ERC1155._beforeTokenTransfer`](#ERC1155-_beforeTokenTransfer-address-address-address-uint256---uint256---bytes-).

</div>
</div>

<a id="ERC1155URIStorage"></a>

<div style={{marginTop: "4em"}} className="w-full flex flex-row items-center justify-between">

## `ERC1155URIStorage`

<a target="_blank" style={{marginTop: "1.5em"}} href="https://github.com/OpenZeppelin/openzeppelin-contracts/blob/v4.9.6/contracts/token/ERC1155/extensions/ERC1155URIStorage.sol">
<svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="lucide lucide-github-icon lucide-github"><path d="M15 22v-4a4.8 4.8 0 0 0-1-3.5c3 0 6-2 6-5.5.08-1.25-.27-2.48-1-3.5.28-1.15.28-2.35 0-3.5 0 0-1 0-3 1.5-2.64-.5-5.36-.5-8 0C6 2 5 2 5 2c-.3 1.15-.3 2.35 0 3.5A5.403 5.403 0 0 0 4 9c0 3.5 3 5.5 6 5.5-.39.49-.68 1.05-.85 1.65-.17.6-.22 1.23-.15 1.85v4"/><path d="M9 18c-4.51 2-5-2-7-2"/></svg>
</a>

</div>

```solidity
import "@openzeppelin/contracts/token/ERC1155/extensions/ERC1155URIStorage.sol";
```

ERC1155 token with storage based token URI management.
Inspired by the ERC721URIStorage extension

_Available since v4.6._

<div className="bg-secondary p-4 rounded-md mb-6">
<h3 style={{ marginTop: "0"}}>Functions</h3>
<div className="font-mono">
- [uri(tokenId)](#ERC1155URIStorage-uri-uint256-)
- [_setURI(tokenId, tokenURI)](#ERC1155URIStorage-_setURI-uint256-string-)
- [_setBaseURI(baseURI)](#ERC1155URIStorage-_setBaseURI-string-)
#### ERC1155
- [supportsInterface(interfaceId)](#ERC1155-supportsInterface-bytes4-)
- [balanceOf(account, id)](#ERC1155-balanceOf-address-uint256-)
- [balanceOfBatch(accounts, ids)](#ERC1155-balanceOfBatch-address---uint256---)
- [setApprovalForAll(operator, approved)](#ERC1155-setApprovalForAll-address-bool-)
- [isApprovedForAll(account, operator)](#ERC1155-isApprovedForAll-address-address-)
- [safeTransferFrom(from, to, id, amount, data)](#ERC1155-safeTransferFrom-address-address-uint256-uint256-bytes-)
- [safeBatchTransferFrom(from, to, ids, amounts, data)](#ERC1155-safeBatchTransferFrom-address-address-uint256---uint256---bytes-)
- [_safeTransferFrom(from, to, id, amount, data)](#ERC1155-_safeTransferFrom-address-address-uint256-uint256-bytes-)
- [_safeBatchTransferFrom(from, to, ids, amounts, data)](#ERC1155-_safeBatchTransferFrom-address-address-uint256---uint256---bytes-)
- [_setURI(newuri)](#ERC1155-_setURI-string-)
- [_mint(to, id, amount, data)](#ERC1155-_mint-address-uint256-uint256-bytes-)
- [_mintBatch(to, ids, amounts, data)](#ERC1155-_mintBatch-address-uint256---uint256---bytes-)
- [_burn(from, id, amount)](#ERC1155-_burn-address-uint256-uint256-)
- [_burnBatch(from, ids, amounts)](#ERC1155-_burnBatch-address-uint256---uint256---)
- [_setApprovalForAll(owner, operator, approved)](#ERC1155-_setApprovalForAll-address-address-bool-)
- [_beforeTokenTransfer(operator, from, to, ids, amounts, data)](#ERC1155-_beforeTokenTransfer-address-address-address-uint256---uint256---bytes-)
- [_afterTokenTransfer(operator, from, to, ids, amounts, data)](#ERC1155-_afterTokenTransfer-address-address-address-uint256---uint256---bytes-)
#### IERC1155MetadataURI
#### IERC1155
#### ERC165
#### IERC165
</div>
</div>

<div className="bg-secondary p-4 rounded-md mb-6">
<h3 style={{ marginTop: "0"}}>Events</h3>
<div className="font-mono">
#### ERC1155
#### IERC1155MetadataURI
#### IERC1155
- [TransferSingle(operator, from, to, id, value)](#IERC1155-TransferSingle-address-address-address-uint256-uint256-)
- [TransferBatch(operator, from, to, ids, values)](#IERC1155-TransferBatch-address-address-address-uint256---uint256---)
- [ApprovalForAll(account, operator, approved)](#IERC1155-ApprovalForAll-address-address-bool-)
- [URI(value, id)](#IERC1155-URI-string-uint256-)
#### ERC165
#### IERC165
</div>
</div>

<a id="ERC1155URIStorage-uri-uint256-"></a>

<div className="border rounded-md mb-4">
<div className="bg-secondary flex w-full justify-between px-4">
<p className="font-bold text-sm font-mono">uri(uint256 tokenId) → string</p>
<div className="flex flex-row items-center gap-2">
<p className="font-light text-sm">public</p>
<a className="peer" data-card href="ERC1155URIStorage-uri-uint256-">#</a>
</div>
</div>
<div className="px-4">

See [`IERC1155MetadataURI.uri`](#IERC1155MetadataURI-uri-uint256-).

This implementation returns the concatenation of the `_baseURI`
and the token-specific uri if the latter is set

This enables the following behaviors:

- if `_tokenURIs[tokenId]` is set, then the result is the concatenation
  of `_baseURI` and `_tokenURIs[tokenId]` (keep in mind that `_baseURI`
  is empty per default);

- if `_tokenURIs[tokenId]` is NOT set then we fallback to `super.uri()`
  which in most cases will contain `ERC1155._uri`;

- if `_tokenURIs[tokenId]` is NOT set, and if the parents do not have a
  uri value set, then the result is empty.

</div>
</div>

<a id="ERC1155URIStorage-_setURI-uint256-string-"></a>

<div className="border rounded-md mb-4">
<div className="bg-secondary flex w-full justify-between px-4">
<p className="font-bold text-sm font-mono">_setURI(uint256 tokenId, string tokenURI)</p>
<div className="flex flex-row items-center gap-2">
<p className="font-light text-sm">internal</p>
<a className="peer" data-card href="ERC1155URIStorage-_setURI-uint256-string-">#</a>
</div>
</div>
<div className="px-4">

Sets `tokenURI` as the tokenURI of `tokenId`.

</div>
</div>

<a id="ERC1155URIStorage-_setBaseURI-string-"></a>

<div className="border rounded-md mb-4">
<div className="bg-secondary flex w-full justify-between px-4">
<p className="font-bold text-sm font-mono">_setBaseURI(string baseURI)</p>
<div className="flex flex-row items-center gap-2">
<p className="font-light text-sm">internal</p>
<a className="peer" data-card href="ERC1155URIStorage-_setBaseURI-string-">#</a>
</div>
</div>
<div className="px-4">

Sets `baseURI` as the `_baseURI` for all tokens

</div>
</div>

<a id="IERC1155MetadataURI"></a>

<div style={{marginTop: "4em"}} className="w-full flex flex-row items-center justify-between">

## `IERC1155MetadataURI`

<a target="_blank" style={{marginTop: "1.5em"}} href="https://github.com/OpenZeppelin/openzeppelin-contracts/blob/v4.9.6/contracts/token/ERC1155/extensions/IERC1155MetadataURI.sol">
<svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="lucide lucide-github-icon lucide-github"><path d="M15 22v-4a4.8 4.8 0 0 0-1-3.5c3 0 6-2 6-5.5.08-1.25-.27-2.48-1-3.5.28-1.15.28-2.35 0-3.5 0 0-1 0-3 1.5-2.64-.5-5.36-.5-8 0C6 2 5 2 5 2c-.3 1.15-.3 2.35 0 3.5A5.403 5.403 0 0 0 4 9c0 3.5 3 5.5 6 5.5-.39.49-.68 1.05-.85 1.65-.17.6-.22 1.23-.15 1.85v4"/><path d="M9 18c-4.51 2-5-2-7-2"/></svg>
</a>

</div>

```solidity
import "@openzeppelin/contracts/token/ERC1155/extensions/IERC1155MetadataURI.sol";
```

Interface of the optional ERC1155MetadataExtension interface, as defined
in the [EIP](https://eips.ethereum.org/EIPS/eip-1155#metadata-extensions).

_Available since v3.1._

<div className="bg-secondary p-4 rounded-md mb-6">
<h3 style={{ marginTop: "0"}}>Functions</h3>
<div className="font-mono">
- [uri(id)](#IERC1155MetadataURI-uri-uint256-)
#### IERC1155
- [balanceOf(account, id)](#IERC1155-balanceOf-address-uint256-)
- [balanceOfBatch(accounts, ids)](#IERC1155-balanceOfBatch-address---uint256---)
- [setApprovalForAll(operator, approved)](#IERC1155-setApprovalForAll-address-bool-)
- [isApprovedForAll(account, operator)](#IERC1155-isApprovedForAll-address-address-)
- [safeTransferFrom(from, to, id, amount, data)](#IERC1155-safeTransferFrom-address-address-uint256-uint256-bytes-)
- [safeBatchTransferFrom(from, to, ids, amounts, data)](#IERC1155-safeBatchTransferFrom-address-address-uint256---uint256---bytes-)
#### IERC165
- [supportsInterface(interfaceId)](#IERC165-supportsInterface-bytes4-)
</div>
</div>

<div className="bg-secondary p-4 rounded-md mb-6">
<h3 style={{ marginTop: "0"}}>Events</h3>
<div className="font-mono">
#### IERC1155
- [TransferSingle(operator, from, to, id, value)](#IERC1155-TransferSingle-address-address-address-uint256-uint256-)
- [TransferBatch(operator, from, to, ids, values)](#IERC1155-TransferBatch-address-address-address-uint256---uint256---)
- [ApprovalForAll(account, operator, approved)](#IERC1155-ApprovalForAll-address-address-bool-)
- [URI(value, id)](#IERC1155-URI-string-uint256-)
#### IERC165
</div>
</div>

<a id="IERC1155MetadataURI-uri-uint256-"></a>

<div className="border rounded-md mb-4">
<div className="bg-secondary flex w-full justify-between px-4">
<p className="font-bold text-sm font-mono">uri(uint256 id) → string</p>
<div className="flex flex-row items-center gap-2">
<p className="font-light text-sm">external</p>
<a className="peer" data-card href="IERC1155MetadataURI-uri-uint256-">#</a>
</div>
</div>
<div className="px-4">

Returns the URI for token type `id`.

If the `\{id\}` substring is present in the URI, it must be replaced by
clients with the actual token type ID.

</div>
</div>

<a id="ERC1155PresetMinterPauser"></a>

<div style={{marginTop: "4em"}} className="w-full flex flex-row items-center justify-between">

## `ERC1155PresetMinterPauser`

<a target="_blank" style={{marginTop: "1.5em"}} href="https://github.com/OpenZeppelin/openzeppelin-contracts/blob/v4.9.6/contracts/token/ERC1155/presets/ERC1155PresetMinterPauser.sol">
<svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="lucide lucide-github-icon lucide-github"><path d="M15 22v-4a4.8 4.8 0 0 0-1-3.5c3 0 6-2 6-5.5.08-1.25-.27-2.48-1-3.5.28-1.15.28-2.35 0-3.5 0 0-1 0-3 1.5-2.64-.5-5.36-.5-8 0C6 2 5 2 5 2c-.3 1.15-.3 2.35 0 3.5A5.403 5.403 0 0 0 4 9c0 3.5 3 5.5 6 5.5-.39.49-.68 1.05-.85 1.65-.17.6-.22 1.23-.15 1.85v4"/><path d="M9 18c-4.51 2-5-2-7-2"/></svg>
</a>

</div>

```solidity
import "@openzeppelin/contracts/token/ERC1155/presets/ERC1155PresetMinterPauser.sol";
```

[`ERC1155`](#ERC1155) token, including:

 - ability for holders to burn (destroy) their tokens
 - a minter role that allows for token minting (creation)
 - a pauser role that allows to stop all token transfers

This contract uses [`AccessControl`](../access#AccessControl) to lock permissioned functions using the
different roles - head to its documentation for details.

The account that deploys the contract will be granted the minter and pauser
roles, as well as the default admin role, which will let it grant both minter
and pauser roles to other accounts.

_Deprecated in favor of [Contracts Wizard](https://wizard.openzeppelin.com/)._

<div className="bg-secondary p-4 rounded-md mb-6">
<h3 style={{ marginTop: "0"}}>Functions</h3>
<div className="font-mono">
- [constructor(uri)](#ERC1155PresetMinterPauser-constructor-string-)
- [mint(to, id, amount, data)](#ERC1155PresetMinterPauser-mint-address-uint256-uint256-bytes-)
- [mintBatch(to, ids, amounts, data)](#ERC1155PresetMinterPauser-mintBatch-address-uint256---uint256---bytes-)
- [pause()](#ERC1155PresetMinterPauser-pause--)
- [unpause()](#ERC1155PresetMinterPauser-unpause--)
- [supportsInterface(interfaceId)](#ERC1155PresetMinterPauser-supportsInterface-bytes4-)
- [_beforeTokenTransfer(operator, from, to, ids, amounts, data)](#ERC1155PresetMinterPauser-_beforeTokenTransfer-address-address-address-uint256---uint256---bytes-)
- [MINTER_ROLE()](#ERC1155PresetMinterPauser-MINTER_ROLE-bytes32)
- [PAUSER_ROLE()](#ERC1155PresetMinterPauser-PAUSER_ROLE-bytes32)
#### ERC1155Pausable
#### Pausable
- [paused()](#Pausable-paused--)
- [_requireNotPaused()](#Pausable-_requireNotPaused--)
- [_requirePaused()](#Pausable-_requirePaused--)
- [_pause()](#Pausable-_pause--)
- [_unpause()](#Pausable-_unpause--)
#### ERC1155Burnable
- [burn(account, id, value)](#ERC1155Burnable-burn-address-uint256-uint256-)
- [burnBatch(account, ids, values)](#ERC1155Burnable-burnBatch-address-uint256---uint256---)
#### ERC1155
- [uri()](#ERC1155-uri-uint256-)
- [balanceOf(account, id)](#ERC1155-balanceOf-address-uint256-)
- [balanceOfBatch(accounts, ids)](#ERC1155-balanceOfBatch-address---uint256---)
- [setApprovalForAll(operator, approved)](#ERC1155-setApprovalForAll-address-bool-)
- [isApprovedForAll(account, operator)](#ERC1155-isApprovedForAll-address-address-)
- [safeTransferFrom(from, to, id, amount, data)](#ERC1155-safeTransferFrom-address-address-uint256-uint256-bytes-)
- [safeBatchTransferFrom(from, to, ids, amounts, data)](#ERC1155-safeBatchTransferFrom-address-address-uint256---uint256---bytes-)
- [_safeTransferFrom(from, to, id, amount, data)](#ERC1155-_safeTransferFrom-address-address-uint256-uint256-bytes-)
- [_safeBatchTransferFrom(from, to, ids, amounts, data)](#ERC1155-_safeBatchTransferFrom-address-address-uint256---uint256---bytes-)
- [_setURI(newuri)](#ERC1155-_setURI-string-)
- [_mint(to, id, amount, data)](#ERC1155-_mint-address-uint256-uint256-bytes-)
- [_mintBatch(to, ids, amounts, data)](#ERC1155-_mintBatch-address-uint256---uint256---bytes-)
- [_burn(from, id, amount)](#ERC1155-_burn-address-uint256-uint256-)
- [_burnBatch(from, ids, amounts)](#ERC1155-_burnBatch-address-uint256---uint256---)
- [_setApprovalForAll(owner, operator, approved)](#ERC1155-_setApprovalForAll-address-address-bool-)
- [_afterTokenTransfer(operator, from, to, ids, amounts, data)](#ERC1155-_afterTokenTransfer-address-address-address-uint256---uint256---bytes-)
#### IERC1155MetadataURI
#### IERC1155
#### AccessControlEnumerable
- [getRoleMember(role, index)](#AccessControlEnumerable-getRoleMember-bytes32-uint256-)
- [getRoleMemberCount(role)](#AccessControlEnumerable-getRoleMemberCount-bytes32-)
- [_grantRole(role, account)](#AccessControlEnumerable-_grantRole-bytes32-address-)
- [_revokeRole(role, account)](#AccessControlEnumerable-_revokeRole-bytes32-address-)
#### AccessControl
- [hasRole(role, account)](#AccessControl-hasRole-bytes32-address-)
- [_checkRole(role)](#AccessControl-_checkRole-bytes32-)
- [_checkRole(role, account)](#AccessControl-_checkRole-bytes32-address-)
- [getRoleAdmin(role)](#AccessControl-getRoleAdmin-bytes32-)
- [grantRole(role, account)](#AccessControl-grantRole-bytes32-address-)
- [revokeRole(role, account)](#AccessControl-revokeRole-bytes32-address-)
- [renounceRole(role, account)](#AccessControl-renounceRole-bytes32-address-)
- [_setupRole(role, account)](#AccessControl-_setupRole-bytes32-address-)
- [_setRoleAdmin(role, adminRole)](#AccessControl-_setRoleAdmin-bytes32-bytes32-)
- [DEFAULT_ADMIN_ROLE()](#AccessControl-DEFAULT_ADMIN_ROLE-bytes32)
#### ERC165
#### IERC165
#### IAccessControlEnumerable
#### IAccessControl
</div>
</div>

<div className="bg-secondary p-4 rounded-md mb-6">
<h3 style={{ marginTop: "0"}}>Events</h3>
<div className="font-mono">
#### ERC1155Pausable
#### Pausable
- [Paused(account)](#Pausable-Paused-address-)
- [Unpaused(account)](#Pausable-Unpaused-address-)
#### ERC1155Burnable
#### ERC1155
#### IERC1155MetadataURI
#### IERC1155
- [TransferSingle(operator, from, to, id, value)](#IERC1155-TransferSingle-address-address-address-uint256-uint256-)
- [TransferBatch(operator, from, to, ids, values)](#IERC1155-TransferBatch-address-address-address-uint256---uint256---)
- [ApprovalForAll(account, operator, approved)](#IERC1155-ApprovalForAll-address-address-bool-)
- [URI(value, id)](#IERC1155-URI-string-uint256-)
#### AccessControlEnumerable
#### AccessControl
#### ERC165
#### IERC165
#### IAccessControlEnumerable
#### IAccessControl
- [RoleAdminChanged(role, previousAdminRole, newAdminRole)](#IAccessControl-RoleAdminChanged-bytes32-bytes32-bytes32-)
- [RoleGranted(role, account, sender)](#IAccessControl-RoleGranted-bytes32-address-address-)
- [RoleRevoked(role, account, sender)](#IAccessControl-RoleRevoked-bytes32-address-address-)
</div>
</div>

<a id="ERC1155PresetMinterPauser-constructor-string-"></a>

<div className="border rounded-md mb-4">
<div className="bg-secondary flex w-full justify-between px-4">
<p className="font-bold text-sm font-mono">constructor(string uri)</p>
<div className="flex flex-row items-center gap-2">
<p className="font-light text-sm">public</p>
<a className="peer" data-card href="ERC1155PresetMinterPauser-constructor-string-">#</a>
</div>
</div>
<div className="px-4">

Grants `DEFAULT_ADMIN_ROLE`, `MINTER_ROLE`, and `PAUSER_ROLE` to the account that
deploys the contract.

</div>
</div>

<a id="ERC1155PresetMinterPauser-mint-address-uint256-uint256-bytes-"></a>

<div className="border rounded-md mb-4">
<div className="bg-secondary flex w-full justify-between px-4">
<p className="font-bold text-sm font-mono">mint(address to, uint256 id, uint256 amount, bytes data)</p>
<div className="flex flex-row items-center gap-2">
<p className="font-light text-sm">public</p>
<a className="peer" data-card href="ERC1155PresetMinterPauser-mint-address-uint256-uint256-bytes-">#</a>
</div>
</div>
<div className="px-4">

Creates `amount` new tokens for `to`, of token type `id`.

See [`ERC1155._mint`](#ERC1155-_mint-address-uint256-uint256-bytes-).

Requirements:

- the caller must have the `MINTER_ROLE`.

</div>
</div>

<a id="ERC1155PresetMinterPauser-mintBatch-address-uint256---uint256---bytes-"></a>

<div className="border rounded-md mb-4">
<div className="bg-secondary flex w-full justify-between px-4">
<p className="font-bold text-sm font-mono">mintBatch(address to, uint256[] ids, uint256[] amounts, bytes data)</p>
<div className="flex flex-row items-center gap-2">
<p className="font-light text-sm">public</p>
<a className="peer" data-card href="ERC1155PresetMinterPauser-mintBatch-address-uint256---uint256---bytes-">#</a>
</div>
</div>
<div className="px-4">

xref:ROOT:erc1155#batch-operations[Batched] variant of [`IERC4626.mint`](../interfaces#IERC4626-mint-uint256-address-).

</div>
</div>

<a id="ERC1155PresetMinterPauser-pause--"></a>

<div className="border rounded-md mb-4">
<div className="bg-secondary flex w-full justify-between px-4">
<p className="font-bold text-sm font-mono">pause()</p>
<div className="flex flex-row items-center gap-2">
<p className="font-light text-sm">public</p>
<a className="peer" data-card href="ERC1155PresetMinterPauser-pause--">#</a>
</div>
</div>
<div className="px-4">

Pauses all token transfers.

See [`ERC1155Pausable`](#ERC1155Pausable) and [`Pausable._pause`](../security#Pausable-_pause--).

Requirements:

- the caller must have the `PAUSER_ROLE`.

</div>
</div>

<a id="ERC1155PresetMinterPauser-unpause--"></a>

<div className="border rounded-md mb-4">
<div className="bg-secondary flex w-full justify-between px-4">
<p className="font-bold text-sm font-mono">unpause()</p>
<div className="flex flex-row items-center gap-2">
<p className="font-light text-sm">public</p>
<a className="peer" data-card href="ERC1155PresetMinterPauser-unpause--">#</a>
</div>
</div>
<div className="px-4">

Unpauses all token transfers.

See [`ERC1155Pausable`](#ERC1155Pausable) and [`Pausable._unpause`](../security#Pausable-_unpause--).

Requirements:

- the caller must have the `PAUSER_ROLE`.

</div>
</div>

<a id="ERC1155PresetMinterPauser-supportsInterface-bytes4-"></a>

<div className="border rounded-md mb-4">
<div className="bg-secondary flex w-full justify-between px-4">
<p className="font-bold text-sm font-mono">supportsInterface(bytes4 interfaceId) → bool</p>
<div className="flex flex-row items-center gap-2">
<p className="font-light text-sm">public</p>
<a className="peer" data-card href="ERC1155PresetMinterPauser-supportsInterface-bytes4-">#</a>
</div>
</div>
<div className="px-4">

See [`IERC165.supportsInterface`](../utils#IERC165-supportsInterface-bytes4-).

</div>
</div>

<a id="ERC1155PresetMinterPauser-_beforeTokenTransfer-address-address-address-uint256---uint256---bytes-"></a>

<div className="border rounded-md mb-4">
<div className="bg-secondary flex w-full justify-between px-4">
<p className="font-bold text-sm font-mono">_beforeTokenTransfer(address operator, address from, address to, uint256[] ids, uint256[] amounts, bytes data)</p>
<div className="flex flex-row items-center gap-2">
<p className="font-light text-sm">internal</p>
<a className="peer" data-card href="ERC1155PresetMinterPauser-_beforeTokenTransfer-address-address-address-uint256---uint256---bytes-">#</a>
</div>
</div>
<div className="px-4">

</div>
</div>

<a id="ERC1155PresetMinterPauser-MINTER_ROLE-bytes32"></a>

<div className="border rounded-md mb-4">
<div className="bg-secondary flex w-full justify-between px-4">
<p className="font-bold text-sm font-mono">MINTER_ROLE() → bytes32</p>
<div className="flex flex-row items-center gap-2">
<p className="font-light text-sm">public</p>
<a className="peer" data-card href="ERC1155PresetMinterPauser-MINTER_ROLE-bytes32">#</a>
</div>
</div>
<div className="px-4">

</div>
</div>

<a id="ERC1155PresetMinterPauser-PAUSER_ROLE-bytes32"></a>

<div className="border rounded-md mb-4">
<div className="bg-secondary flex w-full justify-between px-4">
<p className="font-bold text-sm font-mono">PAUSER_ROLE() → bytes32</p>
<div className="flex flex-row items-center gap-2">
<p className="font-light text-sm">public</p>
<a className="peer" data-card href="ERC1155PresetMinterPauser-PAUSER_ROLE-bytes32">#</a>
</div>
</div>
<div className="px-4">

</div>
</div>

<a id="ERC1155Holder"></a>

<div style={{marginTop: "4em"}} className="w-full flex flex-row items-center justify-between">

## `ERC1155Holder`

<a target="_blank" style={{marginTop: "1.5em"}} href="https://github.com/OpenZeppelin/openzeppelin-contracts/blob/v4.9.6/contracts/token/ERC1155/utils/ERC1155Holder.sol">
<svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="lucide lucide-github-icon lucide-github"><path d="M15 22v-4a4.8 4.8 0 0 0-1-3.5c3 0 6-2 6-5.5.08-1.25-.27-2.48-1-3.5.28-1.15.28-2.35 0-3.5 0 0-1 0-3 1.5-2.64-.5-5.36-.5-8 0C6 2 5 2 5 2c-.3 1.15-.3 2.35 0 3.5A5.403 5.403 0 0 0 4 9c0 3.5 3 5.5 6 5.5-.39.49-.68 1.05-.85 1.65-.17.6-.22 1.23-.15 1.85v4"/><path d="M9 18c-4.51 2-5-2-7-2"/></svg>
</a>

</div>

```solidity
import "@openzeppelin/contracts/token/ERC1155/utils/ERC1155Holder.sol";
```

_Available since v3.1._

<div className="bg-secondary p-4 rounded-md mb-6">
<h3 style={{ marginTop: "0"}}>Functions</h3>
<div className="font-mono">
- [onERC1155Received(, , , , )](#ERC1155Holder-onERC1155Received-address-address-uint256-uint256-bytes-)
- [onERC1155BatchReceived(, , , , )](#ERC1155Holder-onERC1155BatchReceived-address-address-uint256---uint256---bytes-)
#### ERC1155Receiver
- [supportsInterface(interfaceId)](#ERC1155Receiver-supportsInterface-bytes4-)
#### IERC1155Receiver
#### ERC165
#### IERC165
</div>
</div>

<a id="ERC1155Holder-onERC1155Received-address-address-uint256-uint256-bytes-"></a>

<div className="border rounded-md mb-4">
<div className="bg-secondary flex w-full justify-between px-4">
<p className="font-bold text-sm font-mono">onERC1155Received(address, address, uint256, uint256, bytes) → bytes4</p>
<div className="flex flex-row items-center gap-2">
<p className="font-light text-sm">public</p>
<a className="peer" data-card href="ERC1155Holder-onERC1155Received-address-address-uint256-uint256-bytes-">#</a>
</div>
</div>
<div className="px-4">

</div>
</div>

<a id="ERC1155Holder-onERC1155BatchReceived-address-address-uint256---uint256---bytes-"></a>

<div className="border rounded-md mb-4">
<div className="bg-secondary flex w-full justify-between px-4">
<p className="font-bold text-sm font-mono">onERC1155BatchReceived(address, address, uint256[], uint256[], bytes) → bytes4</p>
<div className="flex flex-row items-center gap-2">
<p className="font-light text-sm">public</p>
<a className="peer" data-card href="ERC1155Holder-onERC1155BatchReceived-address-address-uint256---uint256---bytes-">#</a>
</div>
</div>
<div className="px-4">

</div>
</div>

<a id="ERC1155Receiver"></a>

<div style={{marginTop: "4em"}} className="w-full flex flex-row items-center justify-between">

## `ERC1155Receiver`

<a target="_blank" style={{marginTop: "1.5em"}} href="https://github.com/OpenZeppelin/openzeppelin-contracts/blob/v4.9.6/contracts/token/ERC1155/utils/ERC1155Receiver.sol">
<svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="lucide lucide-github-icon lucide-github"><path d="M15 22v-4a4.8 4.8 0 0 0-1-3.5c3 0 6-2 6-5.5.08-1.25-.27-2.48-1-3.5.28-1.15.28-2.35 0-3.5 0 0-1 0-3 1.5-2.64-.5-5.36-.5-8 0C6 2 5 2 5 2c-.3 1.15-.3 2.35 0 3.5A5.403 5.403 0 0 0 4 9c0 3.5 3 5.5 6 5.5-.39.49-.68 1.05-.85 1.65-.17.6-.22 1.23-.15 1.85v4"/><path d="M9 18c-4.51 2-5-2-7-2"/></svg>
</a>

</div>

```solidity
import "@openzeppelin/contracts/token/ERC1155/utils/ERC1155Receiver.sol";
```

_Available since v3.1._

<div className="bg-secondary p-4 rounded-md mb-6">
<h3 style={{ marginTop: "0"}}>Functions</h3>
<div className="font-mono">
- [supportsInterface(interfaceId)](#ERC1155Receiver-supportsInterface-bytes4-)
#### IERC1155Receiver
- [onERC1155Received(operator, from, id, value, data)](#IERC1155Receiver-onERC1155Received-address-address-uint256-uint256-bytes-)
- [onERC1155BatchReceived(operator, from, ids, values, data)](#IERC1155Receiver-onERC1155BatchReceived-address-address-uint256---uint256---bytes-)
#### ERC165
#### IERC165
</div>
</div>

<a id="ERC1155Receiver-supportsInterface-bytes4-"></a>

<div className="border rounded-md mb-4">
<div className="bg-secondary flex w-full justify-between px-4">
<p className="font-bold text-sm font-mono">supportsInterface(bytes4 interfaceId) → bool</p>
<div className="flex flex-row items-center gap-2">
<p className="font-light text-sm">public</p>
<a className="peer" data-card href="ERC1155Receiver-supportsInterface-bytes4-">#</a>
</div>
</div>
<div className="px-4">

See [`IERC165.supportsInterface`](../utils#IERC165-supportsInterface-bytes4-).

</div>
</div>
